Refactor code structure for improved readability and maintainability

--- a/public/html/html.html
+++ b/public/html/html.html
@@ -1,40 +1,155 @@
-<html lang="en" class="__variable_10b8bd __variable_d52403 __variable_f498c6 __variable_8db913 antialiased dark:bg-gray-950 system" style="--scrollbar-padding: 0px;" data-headlessui-focus-visible="">
+<html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
+    <title>
 
+    </title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link href="http://repo.martpia.net:12014/Common/css/base_reset.css" rel="stylesheet" type="text/css">
+    <link href="http://repo.martpia.net:12014/Common/css/StyleSheet.css?2025071801" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="/Common/js/jquery-1.12.0.min.js"></script>
+    <script type="text/javascript" src="/Common/js/iframeResizer.min.js"></script>
 </head>
 
 <body>
-    <div hidden=""></div>
-    <div class="isolate">
-        <div>
-            <div class="fixed inset-x-0 top-0 z-10 border-b border-gray-950/5 dark:border-white/10">
-                <div class="bg-white dark:bg-gray-950">
-                    <div class="flex h-14 items-center justify-between gap-8 px-4 sm:px-6">
-                        <div class="flex items-center gap-4"></div>
-                        <div class="flex items-center gap-2.5 md:hidden">123</div>
-                    </div>
+    <form method="post" action="./CommonIFrame.aspx" id="form1">
+
+
+        <div id="ucTopMenu_UPTabOuter">
+
+            <div class="tab_menu">
+                <div class="tabouter">
+                    <ul id="ulTopMenu">
+                        <li><a id="ucTopMenu_linkBiz" class="link_pagetitle" href="javascript:__doPostBack('ucTopMenu$linkBiz','')">일반문자</a></li>
+                        <li><a id="ucTopMenu_linkRcs" class="link_pagetitle" href="javascript:__doPostBack('ucTopMenu$linkRcs','')">RCS</a></li>
+                        <li class="yellow"><a id="ucTopMenu_linkKakao" class="link_pagetitle" href="javascript:__doPostBack('ucTopMenu$linkKakao','')"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" style="margin-right:4px" viewBox="0 0 20 20" fill="none">
+                                    <rect width="20" height="20" rx="1.76471" fill="#fae100"></rect>
+                                    <ellipse cx="10" cy="9.11765" rx="6.76471" ry="5.58824" fill="#3C1E1E"></ellipse>
+                                    <path d="M9.11765 14.1177L5.68235 17.4706L6.17647 15V13.5294L9.11765 10.1177Z" fill="#3C1E1E"></path>
+                                </svg>친구톡</a></li>
+                        <li class="yellow"><a id="ucTopMenu_linkKakaoAlimtalk" class="link_pagetitle" href="javascript:__doPostBack('ucTopMenu$linkKakaoAlimtalk','')"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" style="margin-right:4px" viewBox="0 0 20 20" fill="none">
+                                    <rect width="20" height="20" rx="1.76471" fill="#fae100"></rect>
+                                    <ellipse cx="10" cy="9.11765" rx="6.76471" ry="5.58824" fill="#3C1E1E"></ellipse>
+                                    <path d="M9.11765 14.1177L5.68235 17.4706L6.17647 15V13.5294L9.11765 10.1177Z" fill="#3C1E1E"></path>
+                                </svg>알림톡</a></li>
+                        <li class="red"><a id="ucTopMenu_linkWebLink" class="link_pagetitle" href="javascript:__doPostBack('ucTopMenu$linkWebLink','')">모바일전단</a></li>
+
+                        <li class="red active"><a id="ucTopMenu_linkGP" class="link_pagetitle" href="javascript:__doPostBack('ucTopMenu$linkGP','')">공동구매</a></li>
+                        <li class="red" style="letter-spacing:-2px;"><a id="ucTopMenu_linkCloud" class="link_pagetitle" href="javascript:__doPostBack('ucTopMenu$linkCloud','')">이미지클라우드</a></li>
+                    </ul>
                 </div>
-                <div class="flex h-14 items-center border-t border-gray-950/5 bg-white px-4 sm:px-6 lg:hidden dark:border-white/10 dark:bg-gray-950">
-                    <button type="button" class="relative inline-grid size-7 place-items-center rounded-md text-gray-950 hover:bg-gray-950/5 dark:text-white dark:hover:bg-white/10 -ml-1.5" aria-label="Open navigation menu"><span class="absolute top-1/2 left-1/2 size-11 -translate-1/2 pointer-fine:hidden"></span>
-                        <svg viewBox="0 0 16 16" fill="currentColor" class="size-4">
-                            <path fill-rule="evenodd" d="M2 4.75A.75.75 0 0 1 2.75 4h10.5a.75.75 0 0 1 0 1.5H2.75A.75.75 0 0 1 2 4.75Zm0 6.5a.75.75 0 0 1 .75-.75h10.5a.75.75 0 0 1 0 1.5H2.75a.75.75 0 0 1-.75-.75Z" clip-rule="evenodd"></path>
-                        </svg>
-                    </button>
-                    <ol class="sticky ml-4 flex min-w-0 items-center gap-2 text-sm/6 whitespace-nowrap">
-                        <li class="flex items-center gap-2">
-                            <span class="text-gray-500 dark:text-gray-400">Getting Started</span>
-                            <svg viewBox="0 0 16 16" class="size-4 fill-gray-950 dark:fill-gray-500">
-                                <path fill-rule="evenodd" d="M6.22 4.22a.75.75 0 0 1 1.06 0l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L8.94 8 6.22 5.28a.75.75 0 0 1 0-1.06Z" clip-rule="evenodd"></path>
-                            </svg>
-                        </li>
-                        <li class="truncate text-gray-950 dark:text-white">Using Vite</li>
-                    </ol>
+                <div class="tabside">
+                    <ul>
+
+                        <li><a class="tabside__btn" href="#" style="letter-spacing:-1px;" onclick="jsPopManual();">온라인매뉴얼</a></li>
+                        <li><a id="ucTopMenu_linkTS" class="tabside__btn" href="javascript:__doPostBack('ucTopMenu$linkTS','')">충전안내</a></li>
+                        <li><a id="ucTopMenu_linkReport" class="tabside__btn" href="javascript:__doPostBack('ucTopMenu$linkReport','')">레포트</a></li>
+                    </ul>
                 </div>
             </div>
 
         </div>
-    </div>
+        <!--// wrap_top -->
+        <div class="wrap_top" style="margin-top:0;">
+            <div class="tabcontents">
+                <style>
+                    .custom-wrapper {
+                        min-height: 800px;
+                        border: 1px solid #ced4da;
+                    }
+
+                    .custom-panel {
+                        overflow: hidden;
+                        display: flex;
+                        flex-direction: column;
+                        width: 740px;
+                        margin: 100px auto;
+                        border: 1px solid rgba(0, 0, 0, 0.25);
+                        border-radius: 18px;
+                        color: #3a3b3c;
+                    }
+
+                    .custom-panel>div:first-child {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        padding: 20px;
+                        font-size: 32px;
+                        font-weight: 600;
+                        background: #E9ECEF;
+                    }
+
+                    .custom-panel>div:nth-child(2) {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        gap: 30px;
+                        padding: 60px 0 60px 0;
+                    }
+
+                    .custom-panel>div:nth-child(2) div {
+                        display: flex;
+                        flex-direction: column;
+                        width: 300px;
+                        font-size: 16px;
+                    }
+
+                    .custom-panel>div:nth-child(2) div b {
+                        margin-bottom: 20px;
+                        font-weight: 600;
+                        font-size: 28px;
+                    }
+
+                    .custom-panel>div:last-child {
+                        padding-bottom: 20px;
+                    }
+
+                    .custom-button {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        height: 64px;
+                        margin: auto;
+                        border: none;
+                        border-radius: 100px;
+                        font-size: 22px;
+                        font-weight: 600;
+                        background-color: #14B8A6;
+                        color: white;
+                        padding: 20px 40px;
+                        cursor: pointer;
+                    }
+                </style>
+                <div class="custom-wrapper ">
+                    <div class="custom-panel">
+                        <div>
+                            사용점 전용 공동구매 서비스
+                        </div>
+                        <div>
+                            <div>
+                                <b>투게더 공동구매란?</b>
+                                공동구매 서비스로 우리 매장 매출을 올려보세요!
+                                신선한 상품을 신청한 고객들에게, 더 저렴하게 판매하고 싶으신가요?<br /><br />
+
+                                '공동구매 서비스'는 고객들이 함께 구매하게 함으로써, 매출을 늘리고 재고 부담은 줄이고, 단골 고객은 확보하는 솔루션입니다.<br/>
+                                <br />
+                                지금 바로 신청하고, 우리 매장의 경쟁력을 높여보세요!
+                            </div>
+                            <div>
+                                <img src="./img/KakaoTalk_20250811_135446445.png" alt="공동구매 이미지" style="width:100%">
+                            </div>
+                        </div>
+                        <div>
+                            <button class="custom-button">공동구매 서비스 신청 바로가기</button>
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </form>
+
 
 </body>
 
